PWA-817 - fix modifier screen on ie edge

--- a/client/app/features/main/dashboard/menus/menus.scss
+++ b/client/app/features/main/dashboard/menus/menus.scss
@@ -7,7 +7,7 @@
     position: relative;
     display: flex;
     flex-wrap: wrap;
-    align-content: space-around;
+    align-content: flex-start;
     padding-top:45px;
   }
   .floating-right-buttons{
